<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color_app"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/mcu3" />

        <TextView
            style="@style/IntroStyle"
            android:fontFamily="cursive"
            android:text="@string/welcome1"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/marvel_cinematic_universe_text_view"
            style="@style/IntroStyle"
            android:gravity="center_horizontal"
            android:text="@string/welcome2"
            android:textSize="29sp" />

        <TextView
            style="@style/IntroStyle"
            android:fontFamily="cursive"
            android:gravity="right"
            android:text="@string/welcome3"
            android:textSize="26sp" />

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/NumberStyle"
                android:text="@string/nr1" />

            <TextView
                android:id="@+id/question_1_text_view"
                style="@style/QuestionStyle"
                android:text="@string/question1" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/q1_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/q1_thor_radio"
                style="@style/RadioButtonStyle"
                android:text="@string/thor" />

            <RadioButton
                android:id="@+id/iron_man_radio"
                style="@style/RadioButtonStyle"
                android:text="@string/iron_man" />

            <RadioButton
                android:id="@+id/q1_hulk_radio"
                style="@style/RadioButtonStyle"
                android:text="@string/hulk" />

            <RadioButton
                android:id="@+id/q1_captain_radio"
                style="@style/RadioButtonStyle"
                android:text="@string/captain_america" />

        </RadioGroup>

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NumberStyle"
                android:text="@string/nr2" />

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question2" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/q2_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/avengers_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/the_avengers" />

            <RadioButton
                android:id="@+id/shield_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/shield" />

            <RadioButton
                android:id="@+id/hydra_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/hydra" />

            <RadioButton
                android:id="@+id/fantastic_four_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/fantastic_four" />

        </RadioGroup>

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NumberStyle"
                android:text="@string/nr3" />

            <TextView
                android:id="@+id/question_3_text_view"
                style="@style/QuestionStyle"
                android:text="@string/question3" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/q3_radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/hawkeye_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/hawkeye" />

            <RadioButton
                android:id="@+id/antman_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/antman" />

            <RadioButton
                android:id="@+id/guardian_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/guardians" />

            <RadioButton
                android:id="@+id/thanos_radio_button"
                style="@style/RadioButtonStyle"
                android:text="@string/thanos" />

        </RadioGroup>

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NumberStyle"
                android:text="@string/nr4" />

            <TextView
                style="@style/QuestionStyle"
                android:text="@string/question4" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/nick_fury_check_box"
            style="@style/CheckBoxesStyle"
            android:text="@string/nick_fury" />

        <CheckBox
            android:id="@+id/stan_lee_check_box"
            style="@style/CheckBoxesStyle"
            android:text="@string/stan_lee" />

        <CheckBox
            android:id="@+id/natasha_check_box"
            style="@style/CheckBoxesStyle"
            android:text="@string/natasha_romanoff" />

        <CheckBox
            android:id="@+id/sam_wilson_check_box"
            style="@style/CheckBoxesStyle"
            android:text="@string/sam_wilson" />

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NumberStyle"
                android:text="@string/nr5" />

            <TextView
                android:id="@+id/question_5_text_view"
                style="@style/QuestionStyle"
                android:text="@string/question5" />

        </LinearLayout>

        <EditText
            android:id="@+id/dr_strange_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/dr_strange_hint" />

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/NumberStyle"
                android:text="@string/nr6" />

            <TextView
                android:id="@+id/question_6_text_view"
                style="@style/QuestionStyle"
                android:text="@string/question6" />

        </LinearLayout>

        <EditText
            android:id="@+id/black_panther_edit_text"
            style="@style/EditTextStyle"
            android:hint="@string/black_panther_hint" />

        <View style="@style/ViewStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/mcu8" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#0d47a1"
                android:onClick="submitAnswers"
                android:paddingBottom="25dp"
                android:paddingTop="25dp"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="19sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/mcu9" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>